# dl_notes

./: .gitignore  README.md  _quarto.yml  contribute.qmd  pyproject.toml
.github/workflows/: build_book.yaml
chapters/: _common.R  index.qmd  intro.qmd
src/dl_notes/: __init__.py
