[project]
name = "dl-notes"
version = "0.1.0"
description = "Notes for Deep Learning"
readme = "README.md"
authors = [
    { name = "Leslie-Lu", email = "luzh29@mail2.sysu.edu.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pyqt6>=6.10.0",
    "qtconsole>=5.7.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[project.optional-dependencies]
cpu = []

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
